Fixes ng-select value body alignment, and renames the import namespace.

--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -106,6 +106,7 @@ classplan-search {
                 height: 100%;
                 display: flex;
                 flex-direction: row;
+                align-items: center;
 
                 .ng-value-icon.left {
                   height: 100%;
